# celestial-tarot-heroes

./: .gitignore  Cargo.toml  MVP.md  README.md  TODO.md  deploy-devnet.env.example  deploy-mvp.sh  deploy.sh
.github/workflows/: ci.yml
contracts/celestial-heroes/: Cargo.toml
contracts/celestial-heroes-mvp/: Cargo.toml
contracts/celestial-heroes-mvp/meta/: Cargo.toml
contracts/celestial-heroes-mvp/meta/src/: main.rs
contracts/celestial-heroes-mvp/scenarios/: init.scen.json  ownership.scen.json  quest_levelup.scen.json  summon.scen.json
contracts/celestial-heroes-mvp/src/: lib.rs
contracts/celestial-heroes-mvp/tests/: mvp_test.rs
contracts/celestial-heroes-mvp/wasm/: Cargo.toml
contracts/celestial-heroes-mvp/wasm/src/: lib.rs
contracts/celestial-heroes/meta/: Cargo.toml
contracts/celestial-heroes/meta/src/: main.rs
contracts/celestial-heroes/src/: lib.rs
contracts/celestial-heroes/wasm/: Cargo.toml
contracts/celestial-heroes/wasm/src/: lib.rs
dapp/: README.md  package.json
dapp/src/: App.css  App.tsx  config.ts
dapp/src/components/: Layout.css  Layout.tsx
dapp/src/hooks/: useContract.ts
dapp/src/pages/: HomePage.css  HomePage.tsx  MyHeroesPage.css  MyHeroesPage.tsx  QuestsPage.tsx
docs/: API.md  ARCHITECTURE.md
