[package]
name = "celestial-heroes-mvp-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false

[dependencies]
celestial-heroes-mvp = { path = ".." }

[workspace]
